[android] Collapse toolbars on canvas-only switch

Because them being expanded while the mode is switched causes a crash.

BUG:475107